plugins {
    id 'application'
    id 'org.springframework.boot' version '2.7.18'
}

apply plugin: 'io.spring.dependency-management'




group = 'pl.edu.agh.siankoteam'
version = '0.1'

repositories {
    mavenCentral()
}

application {
    mainClassName = "quizmanager.Application"
}

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    implementation group: 'org.apache.poi', name: 'poi', version: '3.9'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '3.9'


    implementation('org.springframework.boot:spring-boot-starter-web')
    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
    implementation("org.xerial:sqlite-jdbc:3.32.3.2")
    implementation("com.github.gwenn:sqlite-dialect:0.1.0")
}

test {
    useJUnitPlatform()
}